--- a/backOffice/bacheca.html
+++ b/backOffice/bacheca.html
@@ -46,7 +46,7 @@
 
                     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content" style="background-color:#A0AECD;color: white;">
+                            <div class="modal-content" style="background-color:#A0AECD;color: black;">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="ModalLabel">Are you sure you want to logout?</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
