--- a/backOffice/service.html
+++ b/backOffice/service.html
@@ -3,7 +3,7 @@
     visualizzare disponibilità. Ogni servizio può avere più calendari separati 
     (ad esempio in una sede posso avere molti veterinari, molte "camere" della pensione, ecc.)  -->
 
-<html>
+<html lang="en">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid">
+      <div class="container-fluid" aria-describedby="navbarNavDropdown ">
         <a class="navbar-brand" href="home.html" style="color: white;">Animal House</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="item.html">E-commerce</a>
-            </li>
+            </li> 
             <li class="nav-item">
               <a class="nav-link" href="animal.html">Animal Shop</a>
             </li>
@@ -52,14 +52,14 @@
 
                     <div class="modal fade" id="ModalS" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content" style="background-color:#A0AECD;color: white;">
+                            <div class="modal-content" style="background-color:#A0AECD;color: black;">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="ModalLabel">Are you sure you want to logout?</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" form="FormModify" class="btn" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
-                                <button type="button" class="btn" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
+                                <button type="button" form="FormModify" class="btn btn-primary" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" aria-label="Close">No</button>
+                                <button type="button" class="btn btn-primary" style="margin:1px;background-color: #849531;color: white;" onclick=logout() aria-label="Logout">Yes</button>                             
                             </div>
                             </div>
                         </div>
@@ -77,14 +77,13 @@
           <h2 id="serviceTitle" class="mt-2" style="text-align: left; margin-right:10px; display: inline-block;">All Services</h2>
 
           <div class="dropdown dropdown-bg-red" style="display: inline-block;">
-            <button class="btn dropdown-toggle mb-1" type="button"  style="color: white; background-color: #425664; margin-right: 5px;" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle mb-1" type="button"  style="color: white; background-color: #425664; margin-right: 5px;" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Filter services by mode">
               Mode
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="modeService">
               <li><a class="dropdown-item" href="#" onclick='serviceMode("All")' value="All">All</a></li>
               <li><a class="dropdown-item" href="#" onclick='serviceMode("Online")' value="Online">Online</a></li>
               <li><a class="dropdown-item" href="#" onclick='serviceMode("In Store")' value="In Store">In Store</a></li>
-              <li><a class="dropdown-item" href="#" onclick='serviceMode("At Home")' value="At Home">At Home</a></li>
             </ul>
           </div>
         
@@ -95,7 +94,7 @@
         </div>
         <div class="col">
           <div class="mb-2 mt-2" style="display: flex; justify-content: right; align-items: right;">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal" style="background-color: #849531; border-color: #849531; color: white">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal" style="background-color: #849531; border-color: #849531; color: white" aria-label="Register a new service">
               Register a new service
             </button>
           </div>
@@ -103,8 +102,8 @@
       </div>
 
       <div class="input-group mb-2" >
-        <input type="search" class="form-control rounded" id="searchService" placeholder="Search by Name or Category" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="background-color: #425664; border-color: #425664; color: white" onclick=searchByNameCategory()>search</button>
+        <input type="search" class="form-control rounded" id="searchService" placeholder="Search by Name or Category" aria-label="Search by Name or Category">
+        <button type="button" class="btn btn-primary" style="background-color: #425664; border-color: #425664; color: white" onclick=searchByNameCategory()>search</button>
       </div>
       
 
@@ -120,43 +119,42 @@
               </div>
 
               <!-- Body -->
-              <div class="modal-body">
-                <div class="callout" id="callout" style="display: none;">
-                  <div class="callout-header"></div>
-                  <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
-              </div>
+                <div class="modal-body">
+                  <div class="callout" id="callout" style="display: none;">
+                    <div class="callout-header"></div>
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
+                </div>
+
                 <form id="FormPost">
 
                   <div class="row mb-2">
-                    <label class="col-sm-2 col-form-label">Name*</label>
+                    <label class="col-sm-2 col-form-label" for="inputName">Name*</label>
                     <div class="col-sm-10">
-                      <input id="inputName" type="text" class="form-control" placeholder="Name" aria-label="Service name">
+                      <input id="inputName" type="text" class="form-control" placeholder="Name" aria-label="Service name" required>
                     </div>
                   </div>
 
                   <div class="row mb-2">
-                    <label class="col-sm-2 col-form-label">Mode*</label>
+                    <label class="col-sm-2 col-form-label" for="inputMode">Mode*</label>
                     <div class="col-sm-5">
-                      <select id="inputMode" class="form-select" aria-label="Mode">
+                      <select id="inputMode" class="form-select" aria-label="Mode" required>
                         <option selected></option>
                         <option>In Store</option>
                         <option>Online</option>
-                        <option>At Home</option>
                       </select> 
                     </div>
                     <div class="col-sm-5">
                       <div class="input-group">
-                        <input type="text" class="form-control" id="inputPrice" aria-label="Price" placeholder="Price*">
+                        <input type="text" class="form-control" id="inputPrice" aria-label="Price" placeholder="Price*" required>
                         <span class="input-group-text">&euro;</span>
                       </div>
                     </div>
                   </div>
 
                   <div class="row mb-2">
-                    <label class="col-sm-2 col-form-label">Category*</label>
+                    <label class="col-sm-2 col-form-label" for="inputCategory">Category*</label>
                     <div class="col-sm-5">
-                      <select id="inputCategory" class="form-select" aria-label="Category">
-                        <option selected></option>
+                      <select id="inputCategory" class="form-select" aria-label="Category" required>
                         <option>Animal Sitter</option>
                         <option>Vet & Doctors</option>
                         <option>Grooming</option>
@@ -197,9 +195,9 @@
                   </div>
 
                   <div class="row mb-2">
-                    <label class="col-sm-2 col-form-label"> Location*</label>
+                    <label class="col-sm-2 col-form-label" for="inputLocation"> Location*</label>
                     <div class="col-sm-10">
-                      <input id="inputLocation" type="text" class="form-control" placeholder="Location" aria-label="Location">
+                      <input id="inputLocation" type="text" class="form-control" placeholder="Location" aria-label="Location" required>
                     </div>
                   </div>
 
@@ -216,8 +214,8 @@
 
               </div>
               <div class="modal-footer">
-                <button type="reset" form="FormPost"  class="btn" data-bs-dismiss="modal" style="background-color: #A0AECD; border-color: #A0AECD;">Discard</button>
-                <button type="button" class="btn" onclick=createService() style="background-color: #849531; border-color: #849531;">Save new service</button>
+                <button type="reset" form="FormPost"  class="btn btn-primary" data-bs-dismiss="modal" style="background-color: #A0AECD; border-color: #A0AECD;" aria-label="Close modal without saving">Discard</button>
+                <button type="button" class="btn btn-primary" onclick=createService() style="background-color: #849531; border-color: #849531;" aria-label="Close the modal and save changes">Save new service</button>
               </div>
 
             </div>
