modifica service html js accessibilità

--- a/backOffice/reservation.html
+++ b/backOffice/reservation.html
@@ -96,7 +96,7 @@
                   </p>
                 </div>
                 <div class="modal-footer">
-                  <button type="reset" class="btn" style="margin:1px;background-color: #849531;color: white;" data-bs-dismiss="modal" >&check;</button>              
+                  <button type="reset" class="btn btn-primary" style="margin:1px;background-color: #849531; border-color:#849531; color: white;" data-bs-dismiss="modal" >&check;</button>              
                 </div>
               </div>
             </div>
