--- a/backOffice/reservation.html
+++ b/backOffice/reservation.html
@@ -74,8 +74,8 @@
         </div>
 
         <div class="input-group mb-2" style="margin-bottom: 6px;">
-            <input type="search" class="form-control rounded" id="searchReservation" placeholder="Search by Service name or Client name" aria-label="Search" aria-describedby="search-addon">
-            <button type="button" class="btn" style="color: white; background-color: #425664;" onclick=searchByServiceUsername()>search</button>
+            <input type="search" class="form-control rounded" id="searchReservation" placeholder="Search by Service name or Client name or Location name" aria-label="Search" aria-describedby="search-addon">
+            <button type="button" class="btn" style="color: white; background-color: #425664;" onclick=searchByServiceUsernameLocation()>search</button>
         </div>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4  g-4" id="myDIV">
