backoffice online con foto

--- a/backOffice/bacheca.html
+++ b/backOffice/bacheca.html
@@ -120,7 +120,7 @@
       <div class="card mb-2" >
         <div class="row g-0" >
           <div class="col-md-1 mt-3" >
-              <img src="../routes/uploads/logoPic.png" class="img-fluid rounded" alt="Logo" style="width: 100%; height: auto;">
+              <img src="logoPic.png" class="img-fluid rounded" alt="Logo" style="width: 100%; height: auto;">
           </div>
           <div class="col-md-11">
             <div class="card-body">
