--- a/backOffice/item.html
+++ b/backOffice/item.html
@@ -3,7 +3,7 @@
   Ogni prodotto appartiene ad una categoria (e ad una o più sottocategorie) 
   ha sempre un'immagine (con URI online o uploadata sul file system del server)  -->
 
-<html>
+<html lang="en">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -58,8 +58,8 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-footer">
-                                <button type="reset" form="FormModify-${staff._id}" class="btn" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
-                                <button type="button" class="btn" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
+                                <button type="reset" form="FormModify-${staff._id}" class="btn btn-primary" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
+                                <button type="button" class="btn btn-success" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
                             </div>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
 
               <!-- Button trigger modal -->
               <div  style="display:flex; justify-content: right; align-items: right; margin-bottom: 6px;">
-                <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#ModalNEW" style="margin-right:6px; background-color: #849531; color:white;">
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ModalNEW" style="margin-right:6px; background-color: #849531; color:white;">
                   Register a new item
                 </button> 
               </div>
@@ -99,8 +99,8 @@
 
 
       <div class="input-group" style="margin-bottom: 6px;">
-        <input type="search" class="form-control rounded" id="searchItem" placeholder="Search by Name" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn" style="color: white; background-color: #425664;" onclick=searchByName()>search</button>
+        <input type="search" class="form-control rounded" id="searchItem" placeholder="Search by Name" aria-label="Search by name" aria-describedby="searchbtn">
+        <button id="searchbtn" type="button" class="btn btn-primary" style="color: white; background-color: #425664;" onclick=searchByName()>search</button>
       </div>
 
       <!-- Modal -->
@@ -124,7 +124,7 @@
 
 
                 <div class="row mb-2">
-                  <label class="col-sm-2 col-form-label">Name*</label>
+                  <label class="col-sm-2 col-form-label" for="inputName">Name*</label>
                   <div class="col">
                     <input id="inputName" type="text" class="form-control" placeholder="Name" aria-label="Item name">
                   </div>
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="row mb-2"> 
-                  <label class="col-sm-2 col-form-label">Category*</label>
+                  <label class="col-sm-2 col-form-label" for="inputCategory">Category*</label>
                   <div class="col-sm-10">
                     <select id="inputCategory" class="form-select" aria-label="Category">
                       <option selected></option>
@@ -152,31 +152,38 @@
                 </div> 
 
                 <div class="row mb-2">
-                  <label class="col-sm-2 col-form-label">Animal*</label>
+                  <label class="col-sm-2 col-form-label" for="inputAnimal">Animal</label>
                   <div class="col-sm-10">
                     <select id="inputAnimal" class="form-select" aria-label="Animal">
                       <option selected></option>
-                      <option>Per Tutti</option>
-                      <option>Mammiferi</option>
-                      <option>Uccelli</option>
-                      <option>Rettili</option>
-                      <option>Anfibi</option>
-                      <option>Pesci</option>
-                      <option>Insetti</option>
-                      <option>Altro</option>
+                      <option>For Everyone</option>
+                      <option>Mammals</option>
+                      <option>Birds</option>
+                      <option>Reptiles</option>
+                      <option>Amphibians</option>
+                      <option>Fish</option>
+                      <option>Insects</option>
+                      <option>Others</option>
                     </select>  
                   </div>                       
                 </div> 
-                
+
                 <div class="row mb-2">
-                  <label class="col-sm-2 col-form-label">Brand</label>
+                  <label class="col-sm-2 col-form-label" for="inputSpecies">Species</label>
+                  <div class="col-sm-10">
+                    <input id="inputSpecies" type="text" class="form-control" placeholder="Species" aria-label="Item species">
+                  </div>                       
+                </div> 
+
+                <div class="row mb-2">
+                  <label class="col-sm-2 col-form-label" for="inputBrand">Brand</label>
                   <div class="col-sm-5">
                     <input id="inputBrand" type="text" class="form-control" placeholder="Brand" aria-label="Item brand">
                   </div>
                   <div class="col-sm-5">
                     <div class="input-group">
                       <input type="text" class="form-control" id="inputPrice" aria-label="Price" placeholder="Price*">
-                      <span class="input-group-text">&euro;</span>
+                      <label class="input-group-text" for="inputPrice">&euro;</label>
                     </div>
                   </div>
                 </div>
