--- a/backOffice/item.html
+++ b/backOffice/item.html
@@ -226,5 +226,6 @@
 
     <script src="item.js"></script>
     <script src="image.js"></script> 
+    <script src="tool.js"></script> 
   </body>
 </html>
