--- a/backOffice/service.html
+++ b/backOffice/service.html
@@ -233,5 +233,6 @@
 
     <script src="service.js"></script>
     <script src="image.js"></script> 
+    <script src="tool.js"></script> 
   </body>
 </html>
