--- a/backOffice/user.html
+++ b/backOffice/user.html
@@ -196,5 +196,6 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="user.js"></script>  
     <script src="image.js"></script>            
+    <script src="tool.js"></script> 
   </body>
 </html>
