--- a/backOffice/animal.html
+++ b/backOffice/animal.html
@@ -193,5 +193,6 @@
   
       <script src="animal.js"></script>
       <script src="image.js"></script> 
+      <script src="tool.js"></script> 
     </body>
   </html>
