--- a/backOffice/home.html
+++ b/backOffice/home.html
@@ -5,7 +5,7 @@ Gestione e-commerce: per aggiungere e togliere prodotti, prezzi, descrizioni. Og
 Servizi in presenza: per prenotare servizi in presenza, modificare o cancellare prenotazioni, visualizzare disponibilità. Ogni servizio può avere più calendari separati (ad esempio in una sede posso avere molti veterinari, molte "camere" della pensione, ecc.) 
 (facoltativo:) Servizi online: per prenotare servizi online, modificare o cancellare prenotazioni, controllare disponibilità -->
 
-<html>
+<html lang="en">
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -59,8 +59,8 @@ Servizi in presenza: per prenotare servizi in presenza, modificare o cancellare 
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
-                                <button type="button" class="btn" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
+                                <button type="button" class="btn btn-primary" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
+                                <button type="button" class="btn btn-success" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
                             </div>
                             </div>
                         </div>
