--- a/backOffice/location.html
+++ b/backOffice/location.html
@@ -1,6 +1,6 @@
 <!--Locations-->
 
-<html>
+<html lang="en">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -57,8 +57,8 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-footer">
-                                <button type="reset" form="FormModify-${staff._id}" class="btn" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
-                                <button type="button" class="btn" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
+                                <button type="reset" form="FormModify-${staff._id}" class="btn btn-primary" style="background-color: #425664; border-color: #425664; color:white" data-bs-dismiss="modal" >No</button>
+                                <button type="button" class="btn btn-success" style="margin:1px;background-color: #849531;color: white;" onclick=logout()>Yes</button>                             
                             </div>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
 
       <div class="input-group mt-1" style="margin-bottom: 6px;">
         <input type="search" class="form-control rounded" id="searchLocation" placeholder="Search by Name" aria-label="Search" aria-describedby="search-addon">
-        <button type="button" class="btn " style="background-color: #425664; border-color: #425664; color:white;" onclick=searchByName()>search</button>
+        <button type="button" class="btn btn-primary" style="background-color: #425664; border-color: #425664; color:white;" onclick=searchByName()>search</button>
       </div>
 
       <div  id="myDIV" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
