--- a/backOffice/item.html
+++ b/backOffice/item.html
@@ -141,20 +141,20 @@
                   <div class="col-sm-10">
                     <select id="inputCategory" class="form-select" aria-label="Category">
                       <option selected></option>
-                      <option>Cibo</option>
-                      <option>Prodotti Sanitari</option>
-                      <option>Giochi</option>
-                      <option>Accessori</option>
-                      <option>Case e Cucce</option>
-                      <option>Per Cuccioli</option>
-                    </select>   
+                      <option>Food</option>
+                      <option>Health Products</option>
+                      <option>Toys</option>
+                      <option>Accessories</option>
+                      <option>Houses And Kennels</option>
+                      <option>For Puppies</option>
+                    </select>
                   </div>                       
                 </div> 
 
                 <div class="row mb-2">
-                  <label class="col-sm-2 col-form-label" for="inputAnimal">Animal</label>
+                  <label class="col-sm-2 col-form-label" for="inputAnimal">Animal*</label>
                   <div class="col-sm-10">
-                    <select id="inputAnimal" class="form-select" aria-label="Animal">
+                    <select id="inputAnimal" class="form-select" aria-label="Animal" required>
                       <option selected></option>
                       <option>For Everyone</option>
                       <option>Mammals</option>
