--- a/backOffice/service.html
+++ b/backOffice/service.html
@@ -188,18 +188,18 @@
                       <div class="row">
                         <label class="col-sm-3 col-form-label" for="inputVip">Time</label>
                         <div class="col-sm-9">
-                          <input id="inputTime" type="time"class="form-control" aria-label="Time">  
+                          <input id="inputTime" type="number"class="form-control" aria-label="Time">  
                         </div>
                       </div>
                     </div>
                   </div>
 
-                  <!--div class="row mb-2">
+                  <div class="row mb-2">
                     <label class="col-sm-2 col-form-label" for="inputLocation"> Location*</label>
                     <div class="col-sm-10">
                       <input id="inputLocation" type="text" class="form-control" placeholder="Location" aria-label="Location" required>
                     </div>
-                  </div-->
+                  </div>
 
                   <div class="mb-2">
                     <label for="inputDescription" class="form-label">Description</label>
