--- a/backOffice/user.html
+++ b/backOffice/user.html
@@ -161,7 +161,7 @@
                 <div class="row mb-2">
                   <label for="inputPref" class="col-sm-3 col-form-label">Preferences*</label>
                   <div class="col-sm-9">
-                    <input type="string" class="form-control" id="inputPref" placeholder="Preferences" aria-label="Client's preferences" required>
+                    <input type="string" class="form-control" id="inputPref" placeholder="Preferences separated by commas" aria-label="Client's preferences" required>
                   </div>
                 </div>
 
