--- a/backOffice/bacheca.html
+++ b/backOffice/bacheca.html
@@ -77,7 +77,7 @@
               <option value="None">HomeBoard</option>
               <option value="Review">Review</option>
               <option value="Stray Animals">Stray Animals</option>
-              <option value="Stray Animals">Finding Partners</option>
+              <option value="Finding Partners">Finding Partners</option>
             </span>
           </select>
         </div>
